@@ -1,9 +1,11 @@
 Package: nnet
 Priority: recommended
-Version: 7.3-1
-Date: 2009-05-09
+Version: 7.3-4
+Date: 2012-06-27
 Depends: R (>= 2.5.0), stats, utils
 Suggests: MASS
+Authors@R: c(person("Brian", "Ripley", role = c("aut", "cre", "cph"),
+        email = "ripley@stats.ox.ac.uk"))
 Author: Brian Ripley <ripley@stats.ox.ac.uk>.
 Maintainer: Brian Ripley <ripley@stats.ox.ac.uk>
 Description: Software for feed-forward neural networks with a single
@@ -12,6 +14,6 @@ Title: Feed-forward Neural Networks and Multinomial Log-Linear Models
 License: GPL-2 | GPL-3
 URL: http://www.stats.ox.ac.uk/pub/MASS4/
 LazyLoad: yes
-Packaged: 2009-07-31 14:02:09 UTC; ripley
+Packaged: 2012-06-27 09:47:13 UTC; ripley
 Repository: CRAN
-Date/Publication: 2009-10-28 07:17:10
+Date/Publication: 2012-06-27 09:58:26
