@@ -1,0 +1,25 @@
+12cd48bdd450728c076ce8b6142918e3 *DESCRIPTION
+6b63278a92236d85fbc16016a817d781 *NAMESPACE
+55060d17d95acf2b20f15c91c86f4715 *R/multinom.R
+ec041cbec7fba5e9cfe658aa600862ca *R/nnet.R
+ffabc72d117270490cfe8495be8e7b9e *R/vcovmultinom.R
+91cbc73bd6fed6d715f20cd97e7a47ac *R/zzz.R
+aea650cb108dfd007ba5b35ad6ff7226 *inst/CITATION
+253a0f5b682083faa93e8c636bfd74ba *inst/LICENCE
+4729791c0e3f51b8bfe12b92b1ecfaf2 *inst/NEWS
+e7786a29e35b895e1eebd2e68183e078 *inst/po/de/LC_MESSAGES/R-nnet.mo
+9176b2badc2805658724913dc733a3b0 *inst/po/en@quot/LC_MESSAGES/R-nnet.mo
+a1d01a2971c9eda1f60f3e0d557842e2 *inst/po/fr/LC_MESSAGES/R-nnet.mo
+195c585a7d7a4bbcc02fc9394e738b94 *inst/po/pl/LC_MESSAGES/R-nnet.mo
+658e8411d785b785db614690f26710b0 *man/class.ind.Rd
+874db37ca4219d26c6a908f1c604016d *man/multinom.Rd
+cd6a3761edca3e8aa4c84b873f48f9ff *man/nnet.Hess.Rd
+5549369cf450981481c450ff31720fe7 *man/nnet.Rd
+a3b762d16d720130f354292ec6e5d3ad *man/predict.nnet.Rd
+c7c8e6b1a1aee45883904ef3309dc852 *man/which.is.max.Rd
+186587398fa3f15a25b3d5570f44f88c *po/R-de.po
+682f1e6a6419b3a4055afb9c37d23f03 *po/R-en@quot.po
+c40039412686b21b230e2df82506e179 *po/R-fr.po
+c105277ffbb63dfe03063bd19682c519 *po/R-nnet.pot
+b39fb1feb9b94031e4b1d9f861e10017 *po/R-pl.po
+50efe6a1c3d0166e401d68c30501f4e0 *src/nnet.c
