@@ -65,9 +65,9 @@ test.cl(targets[-samp,], predict(ir1, ir[-samp,]))
 
 # or
 ird <- data.frame(rbind(iris3[,,1], iris3[,,2], iris3[,,3]),
-	species=factor(c(rep("s",50), rep("c", 50), rep("v", 50))))
+        species = factor(c(rep("s",50), rep("c", 50), rep("v", 50))))
 ir.nn2 <- nnet(species ~ ., data = ird, subset = samp, size = 2, rang = 0.1,
-            decay = 5e-4, maxit = 200)
+               decay = 5e-4, maxit = 200)
 table(ird$species[-samp], predict(ir.nn2, ird[-samp,], type = "class"))
 }
 \keyword{neural}
